--- a/debian/control
+++ b/debian/control
@@ -4,14 +4,16 @@ Priority: optional
 Build-Depends: debhelper (>= 9.20120312~),
                perl,
                uuid-dev
-Maintainer: Debian Perl Group <pkg-perl-maintainers@lists.alioth.debian.org>
-Uploaders: gregor herrmann <gregoa@debian.org>,
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Debian Perl Group <pkg-perl-maintainers@lists.alioth.debian.org>
+XSBC-Pexip-Original-Uploaders: gregor herrmann <gregoa@debian.org>,
            Ansgar Burchardt <ansgar@debian.org>,
            Axel Beckert <abe@debian.org>
 Standards-Version: 3.9.4
 Homepage: https://metacpan.org/release/UUID/
 Vcs-Git: git://anonscm.debian.org/pkg-perl/packages/libuuid-perl.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-perl/packages/libuuid-perl.git
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: libuuid-perl
 Architecture: any
