Resync with Debian

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libuuid-perl
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 9.20120312~),
                perl,
                uuid-dev
 Maintainer: Pexip AS <packaging@pexip.com>
