--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Standards-Version: 3.9.4
 Homepage: https://metacpan.org/release/UUID/
 Vcs-Git: git://anonscm.debian.org/pkg-perl/packages/libuuid-perl.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-perl/packages/libuuid-perl.git
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: libuuid-perl
 Architecture: any
