--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,24 @@
---- #YAML:1.0
-name:               UUID
-version:            0.05
-abstract:           ~
-author:  []
-license:            unknown
-distribution_type:  module
+---
+abstract: 'DCE compatible Universally Unique Identifier library for Perl'
+author:
+  - 'Rick Myers <jrm@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: '0'
+  Test::More: '0'
 configure_requires:
-    ExtUtils::MakeMaker:  0
-requires:  {}
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+  Devel::CheckLib: '1.02'
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005'
+license: artistic_2
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: UUID
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  perl: '5.005'
+version: '0.27'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
